--- a/near/integration-tests/Cargo.toml
+++ b/near/integration-tests/Cargo.toml
@@ -10,6 +10,7 @@ borsh = "0.9"
 maplit = "1.0"
 near-units = "0.2.0"
 # arbitrary_precision enabled for u128 types that workspaces requires for Balance types
+serde = "1.0.183"
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 tokio = { version = "1.18.1", features = ["full"] }
 tracing = "0.1"
