--- a/near-rs/contract/Cargo.toml
+++ b/near-rs/contract/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
-name = "hello_near"
+name = "access_grants"
 version = "1.0.0"
-authors = ["Near Inc <hello@near.org>"]
-edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
