Use yarn instead of npm

--- a/near-rs/package.json
+++ b/near-rs/package.json
@@ -4,11 +4,11 @@
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
     "deploy": "cd contract && ./deploy.sh",
-    "build": "npm run build:contract",
+    "build": "yarn build:contract",
     "build:contract": "cd contract && ./build.sh",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "yarn test:unit && yarn test:integration",
     "test:unit": "cd contract && cargo test",
-    "test:integration": "npm run build:contract && cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/access_grants.wasm\"",
+    "test:integration": "yarn build:contract && cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/access_grants.wasm\"",
     "postinstall": "echo no frontend && echo rs tests && echo rs contract"
   },
   "devDependencies": {
