--- a/near-ts/Dockerfile
+++ b/near-ts/Dockerfile
@@ -6,6 +6,8 @@ RUN apt update && apt install -y \
     npm \
 && rm -rf /var/lib/apt/lists/*
 
+RUN npm install --global yarn
+
 RUN adduser runner && adduser runner sudo && mkdir ~runner/code
 
 WORKDIR /home/runner/code
