--- a/evm/package.json
+++ b/evm/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "hardhat test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
     "@nomicfoundation/hardhat-ethers": "^3.0.4",
