Use dotenv-flow

--- a/evm/.gitignore
+++ b/evm/.gitignore
@@ -8,3 +8,9 @@ artifacts/contracts/AccessGrants.sol/*
 
 cache
 node_modules
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
