--- a/evm/package.json
+++ b/evm/package.json
@@ -17,5 +17,8 @@
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.4",
     "typechain": "^8.3.1"
+  },
+  "dependencies": {
+    "dotenv-flow": "^4.1.0"
   }
 }
