--- a/near-rs/integration-tests/Cargo.toml
+++ b/near-rs/integration-tests/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 tokio = { version = "1.18.1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
-near-workspaces = "0.8.0"
+workspaces = "0.6.0"
 pkg-config = "0.3.1"
 
 [[example]]
