--- a/near-ts/package.json
+++ b/near-ts/package.json
@@ -14,7 +14,5 @@
   "devDependencies": {
     "near-cli": "^3.3.0"
   },
-  "dependencies": {
-    "@scure/base": "^1.1.3"
-  }
+  "dependencies": {}
 }
