Deploy evm contract to arbitrumSepolia

--- a/evm/.env
+++ b/evm/.env
@@ -1,3 +1,5 @@
+PRIVATE_KEY=
 SEPOLIA_NODE_URL=
-SEPOLIA_PRIVATE_KEY=
 SEPOLIA_ETHERSCAN_API_KEY=
+ARBITRUM_SEPOLIA_NODE_URL=
+ARBITRUM_SEPOLIA_ETHERSCAN_API_KEY=
