Add support for arbitrumOne

--- a/evm/.env
+++ b/evm/.env
@@ -1,5 +1,6 @@
 PRIVATE_KEY=
 SEPOLIA_NODE_URL=
 SEPOLIA_ETHERSCAN_API_KEY=
+ARBITRUM_ETHERSCAN_API_KEY=
 ARBITRUM_SEPOLIA_NODE_URL=
-ARBITRUM_SEPOLIA_ETHERSCAN_API_KEY=
+ARBITRUM_ONE_NODE_URL=
